--- a/Presentation/presentation.tex
+++ b/Presentation/presentation.tex
@@ -58,6 +58,7 @@
 }
 
 \setbeamertemplate{itemize item}[circle]%{\small\raise0pt\hbox{\textbullet}}
+\setbeamertemplate{itemize subitem}[circle]
 \setbeamertemplate{enumerate items}[default]
 \setbeamercovered{invisible}
 
@@ -67,13 +68,13 @@
 
 \title[Адаптивный рандомизированный алгоритм выделения сообществ в графах]{Адаптивный рандомизированный алгоритм выделения сообществ в графах}
 
-\author{Тимофей Проданов}
-\institute[СПбГУ]{Санкт-Петербургский государственный университет \\
-    Кафедра информатики \\
+\author[Тимофей Проданов]{Тимофей Проданов\\ \normalsize\texttt{timofey.prodanov@gmail.com}}
+\institute[СПбГУ]{Санкт-Петербургский Государственный Университет \\
+    Кафедра Информатики \\
     \vspace{0.4cm}
     Научный руководитель: д.ф.-м.н., проф. Граничин О.\,Н. \\
     Рецензент: Ерофеева В.\,А.\\
-    \vspace{0.7cm}
+    \vspace{0.4cm}
 }
 \date{
     Санкт-Петербург\\
