--- a/Presentation/ps/p3.tex
+++ b/Presentation/ps/p3.tex
@@ -1,54 +1,51 @@
 
 
-\begin{frame}
-	\frametitle{\emph{ARG} как начальный алгоритм \emph{CGGC}}
-	Если начальные алгоритмы дают плохой результат в схеме $CGGC$, то и окончательный результат будет плохим. По модулярности одного разбиения нельзя сказать, хорошее разбиение или плохое. Запускать $RG_k$ с разными параметрами для проверки качества разбиения не выгодно. Поэтому имеет смысл запускать более стабильный $ARG$.
+% \begin{frame}
+% 	\frametitle{\emph{ARG} как начальный алгоритм \emph{CGGC}}
+% 	Если начальные алгоритмы дают плохой результат в схеме $CGGC$, то и окончательный результат будет плохим. По модулярности одного разбиения нельзя сказать, хорошее разбиение или плохое. Запускать $RG_k$ с разными параметрами для проверки качества разбиения не выгодно. Поэтому имеет смысл запускать более стабильный $ARG$.
 
-	\small
-	\begin{table}[H]
-		\caption{Модулярность разбиений, полученных в результате работы $CGGC$ с начальным алгоритмом $A_{init}$ и финальным алгоритмом $A_{final}$ на трёх графах}
-		\begin{tabularx}{\textwidth}{Xrrrrrr} \hline
-		$A_{init}$	& \multicolumn{2}{c}{$RG_3$} & \multicolumn{2}{c}{$RG_{10}$} & \multicolumn{2}{c}{$ARG$} \\
-		$A_{final}$ & \multicolumn{1}{c}{$RG_3$} & \multicolumn{1}{c}{$RG_{10}$} & \multicolumn{1}{c}{$RG_3$} & \multicolumn{1}{c}{$RG_{10}$} & \multicolumn{1}{c}{$RG_3$} & \multicolumn{1}{c}{$RG_{10}$} \\\hline
-		$G_1$ 		& \cred 0.16840	& 0.71155	& \cred 0.44934	& \csilver 0.74794	& 0.42708	& \cgold 0.74872	\\
-		$G_2$				& 0.80628	& \csilver 0.80645	& 0.80633	& \csilver 0.80645	& 0.80628	& \cgold 0.80647	\\
-		$G_3$	& 0.84078	& \cgold 0.85372	& 0.84031	& 0.84448	& 0.83671	& \csilver 0.85279	\\\hline
-		\end{tabularx}
-	\end{table}
+% 	\small
+% 	\begin{table}[H]
+% 		\caption{Модулярность разбиений, полученных в результате работы $CGGC$ с начальным алгоритмом $A_{init}$ и финальным алгоритмом $A_{final}$ на трёх графах}
+% 		\begin{tabularx}{\textwidth}{Xrrrrrr} \hline
+% 		$A_{init}$	& \multicolumn{2}{c}{$RG_3$} & \multicolumn{2}{c}{$RG_{10}$} & \multicolumn{2}{c}{$ARG$} \\
+% 		$A_{final}$ & \multicolumn{1}{c}{$RG_3$} & \multicolumn{1}{c}{$RG_{10}$} & \multicolumn{1}{c}{$RG_3$} & \multicolumn{1}{c}{$RG_{10}$} & \multicolumn{1}{c}{$RG_3$} & \multicolumn{1}{c}{$RG_{10}$} \\\hline
+% 		$G_1$ 		& \cred 0.16840	& 0.71155	& \cred 0.44934	& \csilver 0.74794	& 0.42708	& \cgold 0.74872	\\
+% 		$G_2$				& 0.80628	& \csilver 0.80645	& 0.80633	& \csilver 0.80645	& 0.80628	& \cgold 0.80647	\\
+% 		$G_3$	& 0.84078	& \cgold 0.85372	& 0.84031	& 0.84448	& 0.83671	& \csilver 0.85279	\\\hline
+% 		\end{tabularx}
+% 	\end{table}
 
-\end{frame}
+% \end{frame}
 
 \begin{frame}
 	\frametitle{Адаптивная схема кластеризации основных групп графа}
 
-	Схема $ACGGC$:
+	$ACGGC$ схожа с $CGGC$:
 	\begin{enumerate}
-		\item $n \leftarrow n + 1$
-		\item Вычисляются аргументы функционала\\
-		$k_n^{-} \leftarrow \max\{1, \hat{k}_{n - 1} - d\}$ и $k_n^{+} \leftarrow \hat{k}_{n - 1} + d$
-		\item $RG_{k_n^{-}}$ и $RG_{k_n^{+}}$ создают разбиения $P_n^{-}$ и $P_n^{+}$, они записываются в множество $S$, их модулярности $Q_n^{-}$ и $Q_n^{+}$
-		\item Вычисляются значения функционала\\
-		$y_n^{-} \leftarrow f(Q_n^{-}, k_n^{-}),\ y_n^{+} \leftarrow f(Q_n^{+}, k_n^{+})$
-		\item Рассчитывается следующая оценка:
-		$$\hat{k}_n \leftarrow \max\left\{1, \left[\hat{k}_{n - 1} - \frac{y_n^{+} - y_n^{-}}{k_n^{+} - k_n^{-}}\right]\right\}$$
-		\item При $n \ne l$ --- переход на \bluetext{1} шаг, иначе переход на \bluetext{7} шаг
-		\item В зависимости от $r \in (0, 1]$ выбирается несколько хороших разбиений из $S$, которые формируют максимальное перекрытие $\widetilde{P}$
-		\item Финальный алгоритм выделяет сообщества на основе $\widetilde{P}$
+		\item $l$ начальных алгоритмов:
+		\begin{itemize}
+			\item $RG_k$ с разными $k$
+			\item $k$ подстраиваются
+		\end{itemize}
+		\item Из $l$ начальных разбиений выбирается несколько лучших
+		\item Неопределившиеся узлы разбивает по сообществам финальный алгоритм
 	\end{enumerate}
 \end{frame}
 
 
 \begin{frame}
-	\frametitle{Параметры \emph{CGGC}}
+	\frametitle{Параметры \emph{ACGGC}}
 
 	\begin{multicols}{2}
 
-	\bluetext{\textbullet} $d \in \mathbb{N},\ \alpha > 0 \in \mathbb{R}$
+	\bluetext{\textbullet} Размер возмущения $d$,\\
+	~~~Чувствительность $\alpha$
 	\begin{figure}[H]
 		\begin{tikzpicture}
 			\begin{semilogxaxis}[
 			    table/col sep = semicolon,
-			    height = 0.4\paperheight, 
+			    height = 0.35\paperheight, 
 			    width = 0.99\columnwidth,
 			    xlabel = {$\alpha$},
 			    ylabel = {$Q$},
@@ -70,7 +67,7 @@
 		\end{tikzpicture}
 	\end{figure}
 
-	\vspace{-.4em} \bluetext{\textbullet} $\hat{k}_0 \in \mathbb{N}$
+	\vspace{-.4em} \bluetext{\textbullet} Начальная оценка $\hat{k}_0$
 	\begin{figure}[H]
 		\begin{tikzpicture}
 			\begin{axis}[
@@ -90,7 +87,7 @@
 		\end{tikzpicture}
 	\end{figure}
 
-	\newpage \bluetext{\textbullet} $r \in (0, 1]$ \vspace{-1em}
+	\newpage \bluetext{\textbullet} Доля хороших начальных разбиений $r$ \vspace{-1em}
 	\begin{figure}[H]
 		\begin{tikzpicture}
 			\begin{axis}[
@@ -100,6 +97,7 @@
 			    xlabel = {$r$},
 			    ylabel = {$Q$},
 			    no marks,
+			    legend pos = south east,
 			    y label style={at={(axis description cs:-0.2,.5)}, anchor=south},
 	            x label style={at={(axis description cs:.28,-.3)}, anchor=south},
 			    yticklabel style={/pgf/number format/fixed,
@@ -107,11 +105,12 @@
 			]
 			\addplot table [x = {r}, y={q}]{../Text/data/es/r-r1/july_r.csv};
 			\addplot table [x expr = {1 - \thisrowno{0}}, y={q}]{../Text/data/es/r-r1/july_r1.csv};
+			\legend{{$r_1$}, {$r_2$}};
 			\end{axis}
 		\end{tikzpicture}
 	\end{figure}
 
-	\vspace{0em} \bluetext{\textbullet} $l \in \mathbb{N}$ \vspace{-1em}
+	\vspace{-1em} \bluetext{\textbullet} Количество шагов $l$ \vspace{-1em}
 	\begin{figure}[H]
 		\begin{tikzpicture}
 			\begin{axis}[
@@ -139,18 +138,19 @@
 
 
 \begin{frame}
-	\frametitle{Время работы}
-	Два механизма снижения времени работы:
-
+	\frametitle{Механизмы снижения времени работы}
+	\bluetext{\textbullet} Увеличение значимости времени: \vspace{-0.5em}
 	\begin{figure}[H]
 		\begin{tikzpicture}
 			\begin{semilogxaxis}[
 			    table/col sep = semicolon,
-			    height = 0.45\paperheight,
+			    height = 0.4\paperheight,
 			    width = 0.49\columnwidth,
 			    xlabel = {$\beta$},
 			    ylabel = {$Q$},
 			    no marks,
+			    title = {Модулярность},
+			    title style={at={(0.5,0.9)}},
 			    y label style={at={(axis description cs:-0.25,.5)}, anchor=south},
 			    yticklabel style={/pgf/number format/fixed,
 	                  /pgf/number format/precision=3},
@@ -163,9 +163,11 @@
 		\begin{tikzpicture}
 			\begin{semilogxaxis}[
 			    table/col sep = semicolon,
-			    height = 0.45\paperheight,
+			    height = 0.4\paperheight,
 			    width = 0.49\columnwidth,
 			    xlabel = {$\beta$},
+			    title = {Время},
+			    title style={at={(0.5,0.9)}},
 			    ylabel = {$t$},
 			    y label style={at={(axis description cs:-0.2,.5)}, anchor=south},
 			    no marks,
@@ -176,13 +178,12 @@
 		\end{tikzpicture}
 	\end{figure}\vspace{-1em}
 
-	\pause
-
+	\bluetext{\textbullet} Установка ограничения на максимальную оценку $k_{max}$: \vspace{-0.5em}
 	\begin{figure}[H]
 	\hskip 0.02\columnwidth
 		\begin{tikzpicture} %max(0, 1 + (rgs1[y, x] - max(rgs1[y, ]))/(.003 * max(rgs1[y, ])))
 			\begin{axis}[
-				height = 0.45\paperheight,
+				height = 0.4\paperheight,
 			    width = 0.49\columnwidth,
 				view={0}{90},
 				% grid=minor,
@@ -195,7 +196,10 @@
     			xticklabels={\scriptsize $+\infty$, \scriptsize $50$, \scriptsize $20$, \scriptsize $10$, \scriptsize $6$},
     			xlabel = {$k_{max}$},
     			ylabel = {Graphs},
+			    title = {Модулярность},
+			    title style={at={(0.5,0.9)}},
     			ytick={1.5,2.5,3.5,4.5,5.5,6.5,7.5,8.5},
+	            x label style={at={(axis description cs:0.5,-0.35)}, anchor=south},
     			yticklabels = {\scriptsize $G_8$, \scriptsize $G_7$, \scriptsize $G_6$, \scriptsize $G_5$, \scriptsize $G_4$, \scriptsize $G_3$, \scriptsize $G_2$, \scriptsize $G_1$},
     			% x tick label style = {align = center, rotate = 50, anchor = north east},
 			 ]
@@ -205,7 +209,7 @@
 		\hskip 0.01\columnwidth
 		\begin{tikzpicture} %min(rgs1[y, ]) / rgs[y, x]
 			\begin{axis}[
-				height = 0.45\paperheight,
+				height = 0.4\paperheight,
 			    width = 0.49\columnwidth,
 				view={0}{90},
 				% grid=minor,
@@ -218,7 +222,10 @@
     			xticklabels={\scriptsize $+\infty$, \scriptsize $50$, \scriptsize $20$, \scriptsize $10$, \scriptsize $6$},
     			xlabel = {$k_{max}$},
     			ylabel = {Graphs},
+			    title = {Время},
+			    title style={at={(0.5,0.9)}},
     			ytick={1.5,2.5,3.5,4.5,5.5,6.5,7.5,8.5},
+    			x label style={at={(axis description cs:0.5,-0.35)}, anchor=south},
     			yticklabels = {\scriptsize $G_8$, \scriptsize $G_7$, \scriptsize $G_6$, \scriptsize $G_5$, \scriptsize $G_4$, \scriptsize $G_3$, \scriptsize $G_2$, \scriptsize $G_1$},
     			% x tick label style = {align = center, rotate = 50, anchor = north east},
 			 ]
@@ -233,7 +240,6 @@
 	\frametitle{Сравнение \emph{CGGC} и \emph{ACGGC}}
 	\scriptsize
 	\begin{table}[H]
-		\caption{Модулярность разбиений, полученных \emph{ACGGC} и \emph{CGGC} на тестовых графах}
 		\begin{tabularx}{\textwidth}{lrrrrr} \hline
 					& $ACGGC^{I}$ & $ACGGC^{II}$ & $CGGC_{10}^{10}$	& $CGGC_{3}^{10}$ & $CGGC_{10}^{3}$ \\ \hline
 		karate 			& \csilver 0.417242 	& \cgold 0.417406 	& 0.415598 	& 0.396532	& 0.405243	\\
@@ -259,40 +265,46 @@
 	\end{table}
 \end{frame}
 
-\begin{frame}
-	\frametitle{Сравнение \emph{CGGCi} и \emph{ACGGCi}}
-	\begin{table}[H]
-	\caption{Модулярность работы четырёх итеративных алгоритмов на небольших тестовых графах}
-	\begin{tabularx}{\textwidth}{Xrrrr} \hline
-					& $ACGGCi^{I}$ & $ACGGCi^{II}$ & $CGGCi$	& combined \\ \hline
-	karate			& 0.417242	& \cgold{0.417406}	& 0.417242	& 0.417242	\\
-	dolphins		& 0.525869	& 0.525869	& 0.525869	& 0.525869	\\
-	chesapeake		& 0.262439	& 0.262439	& 0.262439	& 0.262439	\\
-	adjnoun			& 0.303731	& 0.303504	& 0.303571	& \cgold{0.303970}	\\
-	polbooks		& 0.527237	& 0.527237	& 0.527237	& 0.527237	\\
-	football		& 0.604266	& 0.604407	& \cgold{0.604429}	& 0.604407	\\
-	celegans 		& 0.446964	& 0.446836	& 0.445442	& \cgold{0.447234}	\\
-	jazz			& 0.444871	& 0.444871	& 0.444871	& 0.444871	\\
-	netscience		& \cgold{0.908845}	& 0.888422	& \cred 0.725781	& 0.907443	\\
-	email			& 0.576778	& 0.577000	& 0.576749	& \cgold{0.577110}	\\
-	polblogs		& \cgold{0.424025}	& 0.422920	& 0.423281	& 0.423996	\\
-	\hline
-	\end{tabularx}
-\end{table}
-\end{frame}
+% \begin{frame}
+% 	\frametitle{Сравнение \emph{CGGCi} и \emph{ACGGCi}}
+% 	\begin{table}[H]
+% 	\begin{tabularx}{\textwidth}{Xrrrr} \hline
+% 					& $ACGGCi^{I}$ & $ACGGCi^{II}$ & $CGGCi$	& combined \\ \hline
+% 	karate			& 0.417242	& \cgold{0.417406}	& 0.417242	& 0.417242	\\
+% 	dolphins		& 0.525869	& 0.525869	& 0.525869	& 0.525869	\\
+% 	chesapeake		& 0.262439	& 0.262439	& 0.262439	& 0.262439	\\
+% 	adjnoun			& 0.303731	& 0.303504	& 0.303571	& \cgold{0.303970}	\\
+% 	polbooks		& 0.527237	& 0.527237	& 0.527237	& 0.527237	\\
+% 	football		& 0.604266	& 0.604407	& \cgold{0.604429}	& 0.604407	\\
+% 	celegans 		& 0.446964	& 0.446836	& 0.445442	& \cgold{0.447234}	\\
+% 	jazz			& 0.444871	& 0.444871	& 0.444871	& 0.444871	\\
+% 	netscience		& \cgold{0.908845}	& 0.888422	& \cred 0.725781	& 0.907443	\\
+% 	email			& 0.576778	& 0.577000	& 0.576749	& \cgold{0.577110}	\\
+% 	polblogs		& \cgold{0.424025}	& 0.422920	& 0.423281	& 0.423996	\\
+% 	\hline
+% 	\end{tabularx}
+% \end{table}
+% \end{frame}
 
 
 \begin{frame}
-	\frametitle{Заключение}
+	\frametitle{Результаты}
 
 	В рамках работы
 	\begin{itemize}
 		\item Проанализированы современные методы выделения сообществ
-		\item Предложен алгоритм $ARG$, дающий более стабильные результаты, чем $RG$
-		\item Описано возможное применение $ARG$
-		\item Представлены схемы $ACGGC$ и $ACGGCi$, показывающие более хорошие и стабильные результаты, чем $CGGC$ и $CGGCi$
-		\item Описан механизм снижения времени работы $ACGGC$
+		\item Предложен $ARG$
+		\begin{itemize}
+			\item Исследованы параметры
+			\item Более стабилен, чем $RG$
+		\end{itemize}
+		\item Представлена $ACGGC$
+		\begin{itemize}
+			\item Проанализированы параметры
+			\item Описаны механизмы снижения времени работы
+			\item Более стабилен, чем $CGGC$ и лучше результаты
+		\end{itemize}
+		\item Рассмотрена $ACGGCi$
+		\item Исследована комбинация из $ACGGCi$ и $CGGCi$
 	\end{itemize}
-
-	\vspace{2em}\centeringВопросы?
 \end{frame}
