--- a/Presentation/ps/p3.tex
+++ b/Presentation/ps/p3.tex
@@ -296,15 +296,15 @@
 		\item Предложен $ARG$
 		\begin{itemize}
 			\item Исследованы параметры
-			\item Более стабилен, чем $RG$
+			\item Проведено сравнение с $RG$
 		\end{itemize}
 		\item Представлена $ACGGC$
 		\begin{itemize}
 			\item Проанализированы параметры
 			\item Описаны механизмы снижения времени работы
-			\item Более стабилен, чем $CGGC$ и лучше результаты
+			\item Предложена итеративная версия
+			\item Исследована комбинация из $ACGGCi$ и $CGGCi$	
+			\item Проведено сравнение с $CGGC$
 		\end{itemize}
-		\item Рассмотрена $ACGGCi$
-		\item Исследована комбинация из $ACGGCi$ и $CGGCi$
 	\end{itemize}
 \end{frame}
