--- a/Text/sections/section1.tex
+++ b/Text/sections/section1.tex
@@ -196,7 +196,7 @@ $$v, w \in \mathscr{N}, \exists i \in 1..s :\ c_{P_i}(v) \ne c_{P_i}(w) \Rightar
 
 Рандомизированный жадный алгоритм имеет один параметр $k$, в то время как схема кластеризации основных групп графа один параметр $s$ и различные начальные и финальные алгоритмы. В случае использования $RG_k$ в качестве начального алгоритма --- \emph{CGGC} можно рассматривать как алгоритм с параметрами $s,\;k$ и некоторым финальным алгоритмом.
 
-Часто алгоритмы на разных входных данных имеют разные оптимальные параметры, то есть нет одного набора параметров, решающих каждую задачу наилучшим образом. Алгоритм \emph{SPSA} показал хорошие результаты в адаптировании параметров подобных алгоритмов, в ходе работы рассматриваемого алгоритма его параметры варьируются, довольно быстро достигая оптимальной точки.
+Часто алгоритмы на разных входных данных имеют разные оптимальные параметры, то есть нет одного набора параметров, решающих каждую задачу наилучшим образом. Алгоритм \emph{SPSA} показал хорошие результаты в создании адаптивных модификаций алгоритмов, то есть модификаций, подстраивающихся под любые входные данные.
 
 В выпускной квалификационной работе будет рассматриваться применение алгоритма \emph{SPSA} к двум алгоритмам выделения сообществ в графах, а так же сравнение модулярностей этих алгоритмов и полученных с помощью \emph{SPSA} модификаций.
 
